# libskiff

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
cmake/: LibraryConfig.cmake
libskiff/: version.hpp.in
libskiff/bytecode/: executable.cpp  executable.hpp  floating_point.cpp  floating_point.hpp  instructions.hpp
libskiff/generator/: binary_generator.cpp  binary_generator.hpp  instruction_generator.cpp  instruction_generator.hpp
tests/: CMakeLists.txt  floating_point.cpp  instruction_generator.cpp
